--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,8 +1,16 @@
 @charset "UTF-8";
 
+html, body {
+    height: 100%;
+}
+
 body {
   background-color: #000;
   font-family: 'Saira Condensed', sans-serif;
   margin: 0;
   padding: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
